fixing-overflowing-input

--- a/x-pack/plugins/ml/public/jobs/new_job/simple/components/general_job_details/_general_job_details.scss
+++ b/x-pack/plugins/ml/public/jobs/new_job/simple/components/general_job_details/_general_job_details.scss
@@ -23,6 +23,9 @@
     .dedicated-index-label {
       margin-left: $euiSizeXS;
     }
+    .model-memory-input-input {
+      width: 100%;
+    }
   }
 }
 
